--- a/src/IdentityServer4.WsFederation/IdentityServer4.WsFederation.csproj
+++ b/src/IdentityServer4.WsFederation/IdentityServer4.WsFederation.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>IdentityServer4.WsFederation</AssemblyName>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -11,17 +11,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-      <None Include="../../LICENSE" Pack="true" PackagePath=""/>
+      <None Include="../../LICENSE" Pack="true" PackagePath="" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4" Version="2.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
-    <PackageReference Include="Microsoft.IdentityModel.Protocols.WsFederation" Version="5.5.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Logging" Version="5.5.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Protocols" Version="5.5.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.5.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Tokens.Saml" Version="5.5.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Xml" Version="5.5.0" />
+    <PackageReference Include="IdentityServer4" Version="4.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.WsFederation" Version="6.8.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Logging" Version="6.8.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols" Version="6.8.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens.Saml" Version="6.8.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Xml" Version="6.8.0" />
   </ItemGroup>
 </Project>
